@startuml

title __MODELE's Class Diagram__\n

	namespace Modele {
		namespace Modele {
			class Modele.Arbre {
					+ Arbre()
					+ Arbre()
					+ estVide()
					{static} + fusionne()
					+ getRacine()
			}
		}
	}
	

	namespace Modele {
		namespace Modele {
			class Modele.Arbre.Noeud {
					+ Noeud()
					+ Noeud()
					+ getDroit()
					+ getEspece()
					+ getGauche()
			}
		}
	}
	

	namespace Modele {
		namespace Modele {
			abstract class Modele.Espece {
					# genome : double
					{static} + distanceGenetique()
					+ distanceGenetique()
					{abstract} + getDescription()
					{abstract} + getGenome()
					{abstract} + getNom()
			}
		}
	}
	

	namespace Modele {
		namespace Modele {
			class Modele.EspeceAncetre {
					- descendants : List<EspeceVivante>
					+ EspeceAncetre()
					+ getDescendants()
					+ getDescription()
					+ getGenome()
					+ getNom()
			}
		}
	}
	

	namespace Modele {
		namespace Modele {
			class Modele.EspeceVivante {
					- description : String
					- img : String
					- nom : String
					+ EspeceVivante()
					+ EspeceVivante()
					+ getDescription()
					+ getGenome()
					+ getImg()
					+ getNom()
					+ setDescription()
					+ setImg()
					+ setNom()
			}
		}
	}
	

	namespace Modele {
		namespace Modele {
			class Modele.Launcher {
					{static} + main()
			}
		}
	}
	

	namespace Modele {
		namespace Modele {
			class Modele.Matrice {
					- arbres : List<Arbre>
					- deuxAFusionner : Espece[]
					- distMax : double
					- distMin : double
					- especesChoisies : List<EspeceVivante>
					- especesTableau : List<Espece>
					- tableau : double[][]
					+ Matrice()
					+ etapeSuivante()
					+ getArbres()
					+ getDistMax()
					+ getDistMin()
					+ getEspecesTableau()
					+ getTableau()
					+ toString()
					- ajoutEspace()
					- arbreDeRacine()
					- especeAFusionner()
					- remplirTab()
					- resize()
			}
		}
	}
	

	namespace Modele {
		namespace Modele {
			class Modele.Sauvegarde {
					{static} + arboExiste()
					{static} + chargement()
					{static} + chargementDiverse()
					{static} + existe()
					{static} + listeFichierCharg()
					{static} + sauvegardeDiverse()
					{static} + sauvegarder()
					{static} + traitement()
					{static} - ecriture()
			}
		}
	}
	

	namespace Modele {
		namespace Modele {
			class Modele.Sauvegarde.Filtertxt {
					+ accept()
			}
		}
	}
	

	Modele.Arbre o-- Modele.Arbre.Noeud : racine
	Modele.Arbre +-down- Modele.Arbre.Noeud
	Modele.Arbre.Noeud o-- Modele.Arbre.Noeud : droit
	Modele.Arbre.Noeud o-- Modele.Espece : espece
	Modele.Arbre.Noeud o-- Modele.Arbre.Noeud : gauche

	Modele.EspeceAncetre -up-|> Modele.Espece

	Modele.EspeceVivante -up-|> Modele.Espece
	Modele.Sauvegarde +-down- Modele.Sauvegarde.Filtertxt


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
